# darkmatter

./: Cargo.toml  darkmatter.code-workspace
cli/: Cargo.toml
cli/src/: main.rs
companion/: README.md  package.json
db/: Cargo.toml
db/src/: main.rs
db/src/database/: mod.rs
db/src/table/: mod.rs
dm_parser/: Cargo.toml
dm_parser/src/: error.rs  lib.rs  source.rs  stages.rs
dm_parser/src/config/: hooks.rs  mod.rs
dm_parser/src/config/features/: code.rs  collapsible.rs  columns.rs  emoji.rs  frontmatter.rs  image.rs  inline.rs  link.rs  list.rs  markdown.rs  meta.rs  mod.rs  nlp.rs  toc.rs
dm_parser/src/darkmatter/: toc.rs
dm_parser/src/errors/: dm_err.rs  fm_err.rs  md_err.rs  mod.rs  parser_err.rs
dm_parser/src/frontmatter/: mod.rs
dm_parser/src/frontmatter/fixtures/: with-fm.md
dm_parser/src/hooks/: fm_default_values.rs  fm_override_values.rs  h_frontmatter.rs  handler_type.rs  mod.rs
dm_parser/src/models/: content_type.rs  context.rs  darkmatter.rs  dm.rs  frontmatter.rs  handler.rs  html.rs  markdown.rs  mod.rs  pipeline.rs  sentiment.rs  sfc.rs  toc.rs
dm_parser/src/models/html/: code_block.rs  mod.rs  table.rs  traits.rs
dm_parser/src/pipeline/: initial_darkmatter.rs  initialize.rs  mod.rs  parse_html.rs  parse_raw_md.rs  parse_sfc.rs  remaining_darkmatter.rs  state_change.rs
dm_parser/src/pipeline/stages/: a_initialize.rs  b_parse_raw_md.rs  c_initial_darkmatter.rs  d_parse_html.rs  e_finalize_darkmatter.rs  f_finalize_html.rs  g_sfc.rs  mod.rs
dm_parser/test/fixtures/: structured.md
dm_utils/: .rustfmt.toml  Cargo.toml
dm_utils/.cargo/: config.toml
dm_utils/benches/: code_formatting.rs  hashing.rs  lang_detection.rs  paragraph.txt  stemming.rs
dm_utils/benches/fixtures/: large.css  large.html  large.rs  large.ts  small.css  small.html  small.js  small.rs  small.ts
dm_utils/src/: lib.rs
dm_utils/src/code_highlighting/: errors.rs  mod.rs
dm_utils/src/detect_lang/: errors.rs  mod.rs
dm_utils/src/readability/: complexity.rs  read_time.rs
dm_utils/src/stemming/: de.txt  errors.rs  stem.rs
dm_utils/src/stop_words/: errors.rs  mod.rs
dm_utils/src/words/: mod.rs
docs/: api.md  event-handling.md  events.md  features.md  packages.md  pipeline.md
docs/features/: collapsible-list.md  icons.md  md-tag.md  tabs.md
parser/: Cargo.toml
parser/src/: error.rs  lib.rs
parser/src/config/: hooks.rs  mod.rs
parser/src/config/features/: code.rs  columns.rs  emoji.rs  frontmatter.rs  image.rs  link.rs  list.rs  markdown.rs  meta.rs  mod.rs  nlp.rs  toc.rs
parser/src/content/: mod.rs  toc.rs
parser/src/darkmatter/: dm.rs  errors.rs  mod.rs
parser/src/frontmatter/: errors.rs  frontmatter.rs  mod.rs
parser/src/hooks/: errors.rs  fm_override_values.rs
parser/src/md_parser/: highlight_code.rs  html.rs  mod.rs  sfc.rs
parser/src/models/: dm.rs  fm.rs  handler.rs  html.rs  md.rs  mod.rs  sfc.rs
service/: Cargo.toml
utils/: Cargo.toml  config.toml  criterion.toml
utils/.cargo/: config.toml
utils/benches/: lang_detection.rs  stemming.rs
utils/src/: lib.rs
utils/src/detect_lang/: mod.rs
utils/src/hasher/: mod.rs
utils/src/readability/: README.md  mod.rs
utils/src/stemming/: errors.rs  mod.rs  stem.rs
utils/src/stop_words/: mod.rs
utils/src/words/: errors.rs  mod.rs  words.rs
