[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = "1.0.0-beta.8"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.16"
thiserror = "1.0.38"
anyhow = "*"
serde = { version = "1.0.152", features = ["derive"] }
