[package]
name = "dm_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
thiserror = "1.0.38"
# https://docs.rs/gray_matter/latest/gray_matter/
gray_matter = "0.2.5"
# https://docs.rs/crate/pulldown-cmark/latest
pulldown-cmark = { version = "0.9.2", default-features = false, features = ["simd"] }
lingua = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
regex = "1.7.1"
dm_utils = { path = "../dm_utils" }
strum = { version = "0.24.1", features = [ "derive" ] }
strum_macros = "0.24.3"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.4.0"
fake = "2.5.0"
tracing-subscriber = "0.3.16"

