[package]
name = "dm-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
tracing = "0.1"
tracing-subscriber = "0.3"
# https://docs.rs/gray_matter/latest/gray_matter/
gray_matter = "0.2.4"
# https://docs.rs/crate/pulldown-cmark/latest
pulldown-cmark = { version = "0.9.2", default-features = false, features = ["simd"] }
